--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @layer base {
   :root {
     --background: 0 0% 100%;
