--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -76,4 +76,21 @@
   body {
     @apply bg-background text-foreground;
   }
+  .item-link {
+    padding: 0.5rem;
+    transition: transform 0.3s;
+  }
+
+  .item-link:hover {
+    transform: translateY(-6px);
+    filter: drop-shadow(0px 2px 4px);
+  }
+  .no-scrollbar::-webkit-scrollbar {
+     display: none;
+   }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+  }
 }
